--- a/src/style.css
+++ b/src/style.css
@@ -1,229 +1,247 @@
-
 body {
-    margin:0;
-    padding:0;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-h2 { font-size:32px; }
+h2 {
+  font-size: 32px;
+}
 
 div.section {
-    padding: 3em 1em 5em 1em;
-    text-align:center;
-}
-div.section-content {
-    margin:auto;
-}
-.section-title {
-    text-align:center;
-}
-.section-subtitle {
-    text-align:center;
-    color:#aaa;
-}
-.section-text {
-    padding: 0 0 2em 0;
-    text-align:justify;
+  padding: 3em 1em 5em 1em;
+  text-align: center;
 }
 
+div.section-content {
+  margin: auto;
+}
+
+.section-title {
+  text-align: center;
+}
+
+.section-subtitle {
+  text-align: center;
+  color: #aaa;
+}
+
+.section-text {
+  padding: 0 0 2em 0;
+  text-align: justify;
+}
 
 div.block-container {
-    padding:2em 0;
+  padding: 2em 0;
 }
-div.block {
-    background:orange;
-    padding:1em;
-    margin:1em;
-}
-div.block-title {
-    text-align:center;
-    font-weight:bold;
-    margin:0.5em;
-}
-div.block-content {
 
+div.block {
+  background: #e90;
+  padding: 1em;
+  margin: 1em;
+}
+
+div.block-title {
+  text-align: center;
+  font-weight: bold;
+  margin: 0.5em;
 }
 
 div.row-container {
-    padding:1em 0;
-}
-div.row {
-    margin:0 1em 1px 1em;
-    padding:0.8em;
-    background:#fff;
-    text-align:left;
-}
-span.row-name {
-    padding:0 0 1em 0;
-    color:#999;
-}
-span.row-tag {
-    margin:0 1em;
-    padding:0.2em;
-}
-span.row-count {
-    float:right;
-    margin:0 1em 0 0;
-    padding:0.3em 0.6em;
-    border-radius:1em;
-    background:#000;
-    color:#fff;
-}
-.red {
-    background:#f66;
-    color:#fff;
-}
-.orange {
-    background:orange;
-    color:#333;
-}
-.black {
-    background:black;
-    color:#fff;
+  padding: 1em 0;
 }
 
+div.row {
+  margin: 0 1em 1px 1em;
+  padding: 0.8em;
+  background: #fff;
+  text-align: left;
+}
+
+span.row-name {
+  padding: 0 0 1em 0;
+  color: #aaa;
+}
+
+span.row-tag {
+  margin: 0 1em;
+  padding: 0.2em;
+}
+
+span.row-count {
+  float: right;
+  margin: 0 1em 0 0;
+  padding: 0.3em 0.6em;
+  border-radius: 1em;
+  background: #000;
+  color: #fff;
+}
+
+.red {
+  background: #f66;
+  color: #fff;
+}
+
+.orange {
+  background: #e90;
+  color: #333;
+}
+
+.black {
+  background: #000;
+  color: #fff;
+}
 
 div.card-container {
-    padding:1em 0;
-}
-div.card {
-    margin:1em;
-    padding:1em;
-    color:#000;
-    background:#fff;
-    text-align:left;
-}
-div.card-title {
-    padding:0 0 1em 0;
-    font-weight:bold;
-}
-div.card-time {
-    padding:0 0 1em 0;
-    color:#555;
-}
-div.card-content {
-    padding:0 0 1em 0;
-}
-div.card-action {
-    padding:0.7em 1em;
-    background:#000;
-    color:#fff;
-    display:inline-block;
+  padding: 1em 0;
 }
 
+div.card {
+  margin: 1em;
+  padding: 1em;
+  color: #000;
+  background: #fff;
+  text-align: left;
+}
+
+div.card-title {
+  padding: 0 0 1em 0;
+  font-weight: bold;
+}
+
+div.card-time {
+  padding: 0 0 1em 0;
+  color: #333;
+}
+
+div.card-content {
+  padding: 0 0 1em 0;
+}
+
+div.card-action {
+  padding: 0.7em 1em;
+  background: #000;
+  color: #fff;
+  display: inline-block;
+}
 
 div.form-container {
-    padding:2em 0;
+  padding: 2em 0;
 }
 
 div.form {
-    text-align:left;
-    padding:0em;
-    margin:1em 0;
-}
-div.form-fields {
-    margin:0.5em 0;
-}
-div.form-fields input[type=text] {
-    width:100%;
-    padding:1em;
-    box-sizing : border-box;
-}
-div.form-fields input[type=submit] {
-    float:right;
-    padding:1em;
-    background:#000;
-    color:#fff;
-    border:0;
+  text-align: left;
+  padding: 0em;
+  margin: 1em 0;
 }
 
+div.form-fields {
+  margin: 0.5em 0;
+}
+
+div.form-fields input[type=text] {
+  width: 100%;
+  padding: 1em;
+  box-sizing: border-box;
+}
+
+div.form-fields input[type=submit] {
+  float: right;
+  padding: 1em;
+  background: #000;
+  color: #fff;
+  border: 0;
+}
 
 div.footer {
-    padding:4em;
-    text-align:center;
-    color:#555;
-    background:#eee;
+  padding: 4em;
+  text-align: center;
+  color: #555;
+  background: #eee;
 }
 
 div.float-reset {
-    float:none;
-    clear:both;
+  float: none;
+  clear: both;
 }
 
-
-
-
-/*
-  ##Device = Laptops, Desktops
-*/
-
+/* * ##Device = Laptops, Desktops
+ * */
 @media (min-width: 1025px) {
+  div.section-content {
+    width: 800px;
+  }
 
-    div.section-content {
-        width:800px;
-    }
-    div.block {
-        float:left;
-        width:216px;
-        margin:1em 10px;
-        font-size:90%;
-    }
-    div.card {
-        float:left;
-        width:216px;
-        margin:1em 10px;
-        font-size:90%;
-    }
-    div.form {
-        float:left;
-        width:380px;
-        margin:1em 10px;
-    }
-    div.form-fields input {
-        float:left;
-        padding:0.3em !important;
-    }
-    div.form-fields input.shrink {
-        width:50%;
-    }
-    div.form-fields input[type="submit"] {
-        margin:0.5em 0;
-    }
+  div.block {
+    float: left;
+    width: 216px;
+    margin: 1em 10px;
+    font-size: 90%;
+  }
 
+  div.card {
+    float: left;
+    width: 216px;
+    margin: 1em 10px;
+    font-size: 90%;
+  }
+
+  div.form {
+    float: left;
+    width: 380px;
+    margin: 1em 10px;
+  }
+
+  div.form-fields input {
+    float: left;
+    padding: 0.3em !important;
+  }
+
+  div.form-fields input.shrink {
+    width: 50%;
+  }
+
+  div.form-fields input[type=submit] {
+    margin: 0.5em 0;
+  }
 }
-
-/*
-  ## Device = Tablets
-*/
+/* * ## Device = Tablets
+ * */
 @media (min-width: 768px) and (max-width: 1024px) {
+  div.section-content {
+    width: 600px;
+  }
 
-    div.section-content {
-        width:600px;
-    }
-    div.block {
-        float:left;
-        width:145px;
-        margin:1em 10px;
-    }
-    div.card {
-        float:left;
-        width:145px;
-        margin:1em 10px;
-    }
-    div.form {
-        float:left;
-        width:280px;
-        margin:1em 10px;
-    }
-    div.form-fields input {
-        float:left;
-        padding:0.3em !important;
-    }
-    div.form-fields input.shrink {
-        width:50%;
-    }
-    div.form-fields input[type="submit"] {
-        margin:0.5em 0;
-    }
+  div.block {
+    float: left;
+    width: 145px;
+    margin: 1em 10px;
+  }
 
+  div.card {
+    float: left;
+    width: 145px;
+    margin: 1em 10px;
+  }
+
+  div.form {
+    float: left;
+    width: 280px;
+    margin: 1em 10px;
+  }
+
+  div.form-fields input {
+    float: left;
+    padding: 0.3em !important;
+  }
+
+  div.form-fields input.shrink {
+    width: 50%;
+  }
+
+  div.form-fields input[type=submit] {
+    margin: 0.5em 0;
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
